--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           registry: ghcr.io
           name: docker.pkg.github.com/martcarrefour/NestJS_TEST_API/NestJS_TEST_API
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN  }}
           tags: 'develop'
